* 0.6.9svn - ... - release 15/12/2008
- Fixed dstat_disk plugin for total calculation on 2.6.25+ kernels (Noel J. Bergman)
- Precompile regular expressions used as a disk filter (self.diskfilter)
- Raise a warning when discovery returns empty

* 0.6.9 - Locarno - release 02/12/2008
- Input text color is now gray (again)
- Added external dstat_luster plugin (Brock Palen, Kilian Vavalotti)
- Validate integer values in /proc/swaps (Bert de Bruijn)
- Added VMware guest dstat_vmmemctl plugin (Bert de Bruijn)
- Added internal dstat_fs plugin showing number of open files/inodes
- Added internal dstat_socket plugin to show total number of various sockets
- Added internal dstat_aio plugin to see number of asynchronous I/O requests
- Listing modules (-M list) now also lists internal plugins
- Added internal dstat_vm plugin showing page faults, allocations and frees
- Added internal dstat_io plugin showing number of completed I/O requests

* 0.6.8 - Buenos Aires - release 12/09/2008
- Added improved tick patch (Kelly Long)
- Show milliseconds in dstat_time when using --debug cfr. dstat_epoch
- Difference in integer rounding should not affect colouring
- Fixed the IOError when terminal is suspended and IO is unbuffered (Dbt 309953)
- Scheduler accuracy improvements by using sched instead of signal
- Added external dstat_snooze plugin (Kelly Long)
- Improved dstat_time to accept format string from DSTAT_TIMEFMT (Kelly Long)
- Added --pidfile option to write out a pidfile (Kelly Long)
- dstat_epoch and dstat_time now display starttime, not execution time of plugin
- Fix division by zero problem
- Warn when loosing ticks (buffering problems or vmware time sync errors)
- Fixed permissions of plugins (Andrew Pollock)
- Fixed exception when specifying -I eth0 (Radek Brich)
- dstat_int plugin now allows -I total (Radek Brich)
- Fixed typo in dstat_topio and dstat_topbio when using CSV output (Bharvani Toshaan)